--- a/build.gradle
+++ b/build.gradle
@@ -51,6 +51,8 @@ dependencies {
     testImplementation 'org.jetbrains.kotlin:kotlin-test'
     //implementation 'edu.wpi.first.wpilibj:wpilibj-java:2022.3.1'
 
+    implementation 'com.fazecast:jSerialComm:2.9.1'
+
     implementation 'io.ktor:ktor-server-core:1.6.7'
     implementation 'io.ktor:ktor-server-netty:1.6.7'
     implementation 'io.ktor:ktor-jackson:1.6.7'
