--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ plugins {
 }
 
 group = 'com.teambutterflyeffect'
-version = '1.0-SNAPSHOT'
+version = '0.1.0-alpha'
 
 def ROBOT_MAIN_CLASS = "com.teambutterflyeffect.flytrap.entrypoint.RobotLauncherKt"
 
